--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.38.2"
+    "sass": "^1.38.2",
+    "stripe": "^8.176.0"
   },
   "devDependencies": {
     "@types/node": "^16.7.5",
