--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.19.1",
+    "axios": "^0.22.0",
     "faunadb": "^4.4.1",
     "next": "11.1.0",
     "next-auth": "^3.29.0",
@@ -16,7 +18,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.38.2",
-    "stripe": "^8.176.0"
+    "stripe": "^8.178.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
